# task-assembly-client

./: LICENSE  README.md  pyproject.toml  s.py  setup.py  test_client.py
task-assembly/: __init__.py  __main__.py
task_assembly/: __init__.py  cli.py  client.py  handlers.py  utils.py
task_assembly/example/: handlers.py
task_assembly/old/: cli.py  client.py  handlers.py  old_cli.py  old_client.py  old_handlers.py
task_assembly/old/example/: batch.csv  gold.json  handlers.py  template.html
toolkit/: gen.py  schema.json
