[tool.poetry]
name = "task-assembly"
version = "0.1.26"
description = "SDK and CLI for using the Task Assembly crowdwork service"
authors = ["Dave Schultz <dave@daveschultzconsulting.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "task_assembly"}]

[tool.poetry.scripts]
task-assembly = "task_assembly.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
api-client = "^1.3.1"
larry = "^0.2.12"
boto3 = "^1.26.0"
tabulate = "^0.9.0"
toml = "^0.10.2"
pyyaml = "^6.0"
rich = "^13.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
